--- a/waifu.css
+++ b/waifu.css
@@ -5,26 +5,26 @@
   color: #fff;
   cursor: pointer;
   font-size: 12px;
-  right: 0;
-  margin-right: -100px;
+  left: 0;
+  margin-left: -100px;
   padding: 5px 2px 5px 5px;
   position: fixed;
-  transition: margin-right 1s;
+  transition: margin-left 1s;
   width: 60px;
   writing-mode: vertical-rl;
 }
 
 #waifu-toggle.waifu-toggle-active {
-  margin-right: -50px;
+  margin-left: -50px;
 }
 
 #waifu-toggle.waifu-toggle-active:hover {
-  margin-right: -30px;
+  margin-left: -30px;
 }
 
 #waifu {
   bottom: -1000px;
-  right: -40px;
+  left: -40px;
   line-height: 0;
   margin-bottom: 0px;
   position: fixed;
@@ -56,7 +56,7 @@
   width: 240px;
   word-break: break-all;
   top: -20px;
-  right: 20px;
+  left: 20px;
 }
 
 #waifu-tips.waifu-tips-active {
@@ -106,7 +106,8 @@
 }
 
 #waifu-tool svg:hover {
-  fill: #3388bb; /* #34495e */
+  fill: #3388bb;
+  /* #34495e */
 }
 
 @keyframes shake {
