fix: :bug: bug fix

--- a/waifu.css
+++ b/waifu.css
@@ -1,5 +1,5 @@
 #waifu-toggle {
-  background-color: #fa0;
+  background-color: #3388bb;
   border-radius: 5px;
   bottom: 66px;
   color: #fff;
@@ -65,7 +65,7 @@
 }
 
 #waifu-tips span {
-  color: #0099cc;
+  color: #3388bb;
 }
 
 #live2d {
